--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 
   <body>
     <div class="center-screen">
-      <form action="./page/Home.html" method="post">
-        <img
-          src="./img/LOGO-PROJETO.png"
-          alt="Logo"
-          class="small-image mb-4"
-        />
+      <form id="loginForm">
+        <img src="./img/LOGO-PROJETO.png" alt="Logo" class="small-image mb-4" />
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="User" name="username" />
+          <input type="text" class="form-control" placeholder="User" id="username" />
         </div>
         <div class="form-group">
-          <input type="password" class="form-control" placeholder="Password" name="password" />
+          <input type="password" class="form-control" placeholder="Password" id="password" />
         </div>
-        <button type="submit" class="btn btn-primary">Entrar</button>
+        <button type="button" class="btn btn-primary" onclick="login()">Entrar</button>
+        <p id="errorMessage" class="text-danger mt-3"></p>
       </form>
     </div>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="./banco/firebase-config.js"></script>
+    <script src="./banco/main.js"></script>
   </body>
 </html>
