Modificação no login

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="form-group">
           <input type="password" class="form-control" placeholder="Password" id="password" />
         </div>
-        <button type="button" class="btn btn-primary" onclick="login()">Entrar</button>
+        <button type="submit" class="btn btn-primary" id="loginButton">Entrar</button>
         <p id="errorMessage" class="text-danger mt-3"></p>
       </form>
     </div>
