--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="./banco/firebase-config.js"></script>
-    <script src="./banco/main.js"></script>
+    <script src="./banco/index.js"></script>
   </body>
 </html>
